feat(docs): Add PWA support to VitePress documentation
- Configure PWA with @vite-pwa/vitepress integration
- Add PWA manifest with app metadata and icon definitions
- Generate multiple icon sizes (16x16, 32x32, 180x180, 192x192, 512x512) including maskable variants
- Add favicon.ico and various platform-specific icons
- Set up workbox service worker for offline caching
- Add deployment script with SFTP support and environment configuration
- Update root package.json with docs workspace and deployment scripts
- Add icon generation script using Playwright for automated icon creation
- Configure proper headers for COOP/COEP policies for shared array buffer support

--- a/docs/package.json
+++ b/docs/package.json
@@ -6,12 +6,15 @@
     "scripts": {
         "dev": "vitepress dev .",
         "build": "vitepress build .",
-        "preview": "vitepress preview ."
+        "preview": "vitepress preview .",
+        "icons": "tsx ./scripts/generate-doc-icons.ts"
     },
     "devDependencies": {
         "@types/node": "^25.0.1",
         "typescript": "^5.9.3",
-        "vitepress": "^1.6.4"
+        "vitepress": "^1.6.4",
+        "@vite-pwa/vitepress": "^0.5.3",
+        "tsx": "^4.21.0"
     },
     "dependencies": {
         "@codemirror/autocomplete": "^6.20.0",
