--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "scripts": {
         "test": "npm run build && npm run lint && npm run test:unit && npm run test:e2e ",
         "test:unit": "vitest run --config vitest.unit.config.ts --coverage",
-        "http": "tsx scripts/http-service.ts ./ --port 8399",
+        "http": "tsx scripts/http-service.ts ./docs/.vitepress/dist --port 8399",
         "test:e2e": "vitest run --config vitest.e2e.config.ts",
         "test:debug": "vitest run --config vitest.e2e.config.ts --no-file-parallelism",
         "build": "vite build",
@@ -42,7 +42,8 @@
         "docs:dev": "npm run dev --workspace=@web-sqlite-js/docs",
         "docs:build": "npm run build --workspace=@web-sqlite-js/docs",
         "docs:preview": "npm run preview --workspace=@web-sqlite-js/docs",
-        "docs:icons": "npm run icons --workspace=@web-sqlite-js/docs"
+        "docs:icons": "npm run icons --workspace=@web-sqlite-js/docs",
+        "docs:deploy": "cd docs && ./deploy.sh"
     },
     "files": [
         "dist"
