--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "web-sqlite-js",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "description": "web-sqlite-js is a friendly, out-of-the-box SQLite database for the web that makes persistent client-side storage simple for every developer.",
     "workspaces": [
         "docs"
@@ -78,5 +78,5 @@
     "bugs": {
         "url": "https://github.com/wuchuheng/web-sqlite-js/issues"
     },
-    "homepage": "https://web-sqlite-js.wuchuheng.com/"
+    "homepage": "https://web-sqlite-js.wuchuheng.com"
 }
