feat(architecture): Refactor core architecture for service worker support and bundle optimization
- Implement functional core architecture with context-based SQLite operations in src/core/sqlite-ops.ts
- Add same-thread execution mode via local-bridge.ts for service worker environments
- Refactor worker bridge to use self-reference worker pattern eliminating code duplication
- Implement runtime WASM decompression using DecompressionStream API, reducing bundle size by ~500KB
- Add gzip-compressed WASM binary (sqlite3.wasm.gz) and prebuild compression script
- Implement zero-config auto-detection between worker and same-thread modes
- Add comprehensive E2E tests for same-thread mode and nested worker scenarios
- Add browser compatibility documentation with minimum browser version requirements
- Update README and getting-started guide with new architecture details
- Update CDN sample and VitePress configuration for documentation

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "web-sqlite-js",
-    "version": "1.0.5",
+    "version": "1.0.6",
     "description": "web-sqlite-js is a friendly, out-of-the-box SQLite database for the web that makes persistent client-side storage simple for every developer.",
     "workspaces": [
         "docs"
@@ -32,6 +32,7 @@
         "http:docs": "tsx scripts/http-service.ts ./docs/.vitepress/dist --port 8399",
         "test:e2e": "vitest run --config vitest.e2e.config.ts",
         "test:debug": "vitest run --config vitest.e2e.config.ts --no-file-parallelism",
+        "prebuild": "gzip -c src/jswasm/sqlite3.wasm > src/jswasm/sqlite3.wasm.gz",
         "build": "MINIFY=true vite build",
         "build:dev": "SOURCE_MAP=true vite build",
         "build:watch": "vite build --watch",
@@ -64,6 +65,7 @@
         "http-server": "^14.1.1",
         "jiti": "^2.6.1",
         "playwright": "^1.57.0",
+        "terser": "^5.44.1",
         "tsx": "^4.21.0",
         "typescript": "^5.9.3",
         "typescript-eslint": "^8.49.0",
